squidiptables.rules
# Generated by iptables-save v1.4.21 on Wed May 21 22:11:09 2014
*nat
:PREROUTING ACCEPT [3337:304153]
:INPUT ACCEPT [851:108171]
:OUTPUT ACCEPT [483:30116]
:POSTROUTING ACCEPT [486:30303]
-A PREROUTING -i em1 -p tcp -m iprange --src-range 192.168.6.1-192.168.6.250 -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A POSTROUTING -o em1 -m iprange --src-range 192.168.6.1-192.168.6.250 -j SNAT --to-source 192.168.6.253
COMMIT
# Completed on Wed May 21 22:11:09 2014
# Generated by iptables-save v1.4.21 on Wed May 21 22:11:09 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [85390:62966962]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.6.0/24 -j ACCEPT
-A INPUT -j DROP
-A INPUT -j LOG
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 192.168.6.0/24 -j ACCEPT
COMMIT
# Completed on Wed May 21 22:11:09 2014
